--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     
     // CABEÇALHO PROFISSIONAL - MARBE (FORNECEDOR)
     doc.setFontSize(18); doc.setTextColor(44, 123, 229); doc.setFont("helvetica", "bold");
-    doc.text("MARBE COMERCIO E SERVICOS", 20, 20);
+    doc.text("S B Comercio de Borrachas e Servicos LTDA", 20, 20);
     doc.setFontSize(9); doc.setTextColor(100); doc.setFont("helvetica", "normal");
     doc.text("CNPJ: 61.149.312/0001-56", 20, 26);
     doc.text("Endereço: Rua São Carlos, 84 - Vila Mariana - Ribeirão Preto / SP", 20, 31);
@@ -250,3 +250,4 @@
 </script>
 </body>
 </html>
+
