--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema Marbe v19.0 - Financeiro Oficial</title>
+  <title>Sistema Marbe v20.0 - Versao Final Estavel</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -22,7 +22,7 @@
     .card { border: 1px solid #ddd; padding: 10px; border-radius: 8px; margin-bottom: 8px; background: #fafafa; }
     table { width: 100%; border-collapse: collapse; font-size: 12px; margin-top: 10px; }
     table th, table td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-    .finance-card { border-left: 5px solid var(--primary); padding: 10px; margin-bottom: 10px; background: #fff; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    .finance-card { border-left: 5px solid var(--primary); padding: 10px; margin-bottom: 10px; background: #fff; }
   </style>
 </head>
 <body onload="init()">
@@ -32,8 +32,8 @@
     <button class="tab-btn active" onclick="tab('calc')">Calculo</button>
     <button class="tab-btn" onclick="tab('orc')">Orcam.</button>
     <button class="tab-btn" onclick="tab('hist')">Historico</button>
-    <button class="tab-btn" onclick="tab('entrega')">Pedidos Entregues</button>
-    <button class="tab-btn" onclick="tab('receber')" style="background:var(--success); color:white;">A Receber</button>
+    <button class="tab-btn" onclick="tab('entrega')">Entregues/NF</button>
+    <button class="tab-btn" onclick="tab('receber')" style="background:var(--success); color:white;">Receber</button>
     <button class="tab-btn" onclick="tab('dash')">Dash</button>
     <button class="tab-btn" onclick="tab('cfg')">Precos Custo</button>
   </div>
@@ -44,10 +44,11 @@
       <div><label>Comprimento (mm)</label><input type="number" id="l"></div>
     </div>
     <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
-      <div><label>Camada (mm)</label><input type="number" id="e"></div>
-      <div><label>Horas</label><input type="number" id="h" value="10"></div>
+      <div><label>Camada Revest. (mm)</label><input type="number" id="e"></div>
+      <div><label>Horas Trab.</label><input type="number" id="h" value="10"></div>
     </div>
-    <label>Material</label><select id="matSelect"></select>
+    <label>Material (Materia-Prima)</label><select id="matSelect"></select>
+    <label>Tipo</label><select id="tipoServ"><option value="0.045">PECA NOVA</option><option value="0.065">REFORMA</option></select>
     <button class="btn" style="background:var(--success)" onclick="calcular()">CALCULAR PRECO</button>
     <div id="resCalc" style="display:none; padding:10px; background:#eef9f0; margin-top:10px; border-radius:8px; text-align:center;"></div>
     <button id="addBtn" class="btn" style="background:var(--primary); display:none;" onclick="addCarrinho()">ADICIONAR AO PEDIDO</button>
@@ -61,17 +62,14 @@
   </div>
 
   <div id="hist" class="section">
-    <h3>Historico de Vendas</h3>
     <div id="listaHist"></div>
   </div>
 
   <div id="entrega" class="section">
-    <h3>Lancar Nota Fiscal e Parcelas</h3>
     <div id="listaEntrega"></div>
   </div>
 
   <div id="receber" class="section">
-    <h3>Boletos e Controle de Recebimento</h3>
     <div id="listaBoletos"></div>
   </div>
 
@@ -81,20 +79,24 @@
   </div>
 
   <div id="cfg" class="section">
-    <h3>Tabela de Materiais (Precos de Custo)</h3>
-    <label>Valor Hora Producao</label><input type="number" id="cfgVh" onchange="salvar()">
+    <h3>Tabela de Custos (Materia-Prima)</h3>
+    <label>Valor Hora Producao</label><input type="number" id="cfgVh" onchange="salvarTabelaPrecos()">
     <div id="listaMatsCfg"></div>
-    <button class="btn" style="background:var(--primary)" onclick="addMat()">+ Adicionar Borracha</button>
+    <button class="btn" style="background:var(--primary)" onclick="addMat()">+ Adicionar Material</button>
   </div>
 </div>
 
 <script>
-  let DB = { vh: 50, os: 330, mats: [{n:"Natural Preta", p:13}, {n:"Nitrilica", p:49}], vendas: [], financeiro: [] };
+  // Memorias separadas para nao misturar
+  let PRECOS = { vh: 50, mats: [{n:"Natural Preta", p:13}, {n:"Nitrilica", p:49}] };
+  let SISTEMA = { os: 330, vendas: [], financeiro: [] };
   let itens = []; let tItem = null;
 
   function init() {
-    let s = localStorage.getItem('marbe_v19_oficial');
-    if(s) DB = JSON.parse(s);
+    let p = localStorage.getItem('marbe_precos_v20');
+    if(p) PRECOS = JSON.parse(p);
+    let s = localStorage.getItem('marbe_dados_v20');
+    if(s) SISTEMA = JSON.parse(s);
     renderCfg();
   }
 
@@ -105,19 +107,20 @@
     if(id === 'hist') renderHist();
     if(id === 'entrega') renderEntrega();
     if(id === 'receber') renderReceber();
+    if(id === 'dash') renderDash();
   }
 
-  // --- LOGICA DE CALCULO ---
   function calcular() {
     const d = parseFloat(document.getElementById('d').value);
     const l = parseFloat(document.getElementById('l').value);
     const e = parseFloat(document.getElementById('e').value);
     const pk = parseFloat(document.getElementById('matSelect').value);
+    const imp = parseFloat(document.getElementById('tipoServ').value);
     const peso = Math.ceil((Math.PI * (d + e) * l * e) * 1200 / 1000000000);
-    const unit = (((peso * pk * 1.1) + (parseFloat(document.getElementById('h').value) * DB.vh)) * 2.5) * 1.045;
+    const unit = (((peso * pk * 1.1) + (parseFloat(document.getElementById('h').value) * PRECOS.vh)) * 2.5) * (1 + imp);
     tItem = { n: document.getElementById('matSelect').options[document.getElementById('matSelect').selectedIndex].text, med: d+"x"+l, e: e+"mm", q: 1, v: unit, kg: peso, custoK: pk };
     document.getElementById('resCalc').style.display="block";
-    document.getElementById('resCalc').innerHTML = `Unitario: R$ ${unit.toFixed(2)}`;
+    document.getElementById('resCalc').innerHTML = `Preco: R$ ${unit.toFixed(2)} | Peso: ${peso}kg`;
     document.getElementById('addBtn').style.display="block";
   }
 
@@ -126,83 +129,84 @@
     let tot = 0;
     document.getElementById('itensOrc').innerHTML = itens.map((i, idx) => {
         tot += i.v * i.q;
-        return `<div class="card">${i.n} - R$ ${i.v.toFixed(2)} <button onclick="itens.splice(${idx},1); renderCarrinho()">X</button></div>`;
+        return `<div class="card">${i.n} (${i.med}) - Qtd: ${i.q} <button onclick="itens.splice(${idx},1); renderCarrinho()">X</button></div>`;
     }).join('');
     document.getElementById('totalOrc').innerText = "R$ " + tot.toFixed(2);
   }
 
-  // --- HISTORICO E VENDAS ---
   function renderHist() {
-    document.getElementById('listaHist').innerHTML = DB.vendas.slice().reverse().map((v, i) => {
-        const idx = DB.vendas.length - 1 - i;
-        return `<div class="card">
-            OS: ${v.os} | ${v.cliente} | R$ ${v.total.toFixed(2)}<br>
-            ${!v.confirmado ? `<button onclick="confirmar(${idx})" style="background:var(--success); color:white; border:none; padding:5px; border-radius:4px;">Confirmar Venda</button>` : `<b style="color:green">VENDA CONFIRMADA</b>`}
-        </div>`;
+    document.getElementById('listaHist').innerHTML = SISTEMA.vendas.slice().reverse().map((v, i) => {
+        const idx = SISTEMA.vendas.length - 1 - i;
+        return `<div class="card">OS: ${v.os} | ${v.cliente} | R$ ${v.total.toFixed(2)}<br>
+            ${!v.confirmado ? `<button onclick="confirmar(${idx})">Confirmar Venda</button>` : `<b style="color:green">VENDIDO</b>`}</div>`;
     }).join('');
   }
-  function confirmar(i) { DB.vendas[i].confirmado = true; salvar(); renderHist(); }
+  function confirmar(i) { SISTEMA.vendas[i].confirmado = true; salvarDados(); renderHist(); }
 
-  // --- ENTREGA (LANÇAR NF E PARCELAS) ---
   function renderEntrega() {
-    const vendidos = DB.vendas.filter(v => v.confirmado && !v.entregue);
-    document.getElementById('listaEntrega').innerHTML = vendidos.map(v => `
-      <div class="card">
-        <strong>OS: ${v.os} - ${v.cliente}</strong><br>
-        <input type="text" id="nf_${v.os}" placeholder="N. da Nota Fiscal" style="width:48%">
-        <input type="number" id="parc_${v.os}" placeholder="Qtd Parcelas" style="width:48%">
-        <button class="btn" style="background:var(--info)" onclick="lancarNF(${v.os})">LANCAR NF E GERAR BOLETOS</button>
-      </div>`).join('');
+    const vends = SISTEMA.vendas.filter(v => v.confirmado && !v.entregue);
+    document.getElementById('listaEntrega').innerHTML = vends.map(v => `
+      <div class="card"><strong>OS: ${v.os} - ${v.cliente}</strong><br>
+        <input type="text" id="nf_${v.os}" placeholder="N. Nota Fiscal" style="width:48%">
+        <input type="number" id="parc_${v.os}" placeholder="Parcelas" style="width:48%">
+        <button class="btn" style="background:var(--info)" onclick="lancarNF(${v.os})">LANCAR E GERAR FINANCEIRO</button></div>`).join('');
   }
 
   function lancarNF(os) {
     const nf = document.getElementById('nf_'+os).value;
     const qtd = parseInt(document.getElementById('parc_'+os).value);
     if(!nf || !qtd) return alert("Preencha NF e Parcelas");
-    
-    let venda = DB.vendas.find(v => v.os === os);
-    venda.entregue = true;
-    venda.nf = nf;
-    
-    const vParc = venda.total / qtd;
+    let v = SISTEMA.vendas.find(x => x.os === os);
+    v.entregue = true; v.nf = nf;
     for(let i=1; i<=qtd; i++) {
-        DB.financeiro.push({ os, cliente: venda.cliente, nf, parc: i+"/"+qtd, valor: vParc, venc: "", pago: false });
+        SISTEMA.financeiro.push({ os, cliente: v.cliente, nf, parc: i+"/"+qtd, valor: v.total/qtd, venc: "", pago: false });
     }
-    salvar(); tab('receber');
+    salvarDados(); tab('receber');
   }
 
-  // --- CONTAS A RECEBER ---
   function renderReceber() {
-    document.getElementById('listaBoletos').innerHTML = DB.financeiro.map((f, i) => `
+    document.getElementById('listaBoletos').innerHTML = SISTEMA.financeiro.map((f, i) => `
       <div class="finance-card" style="border-left-color: ${f.pago?'green':'red'}">
-        <strong>${f.cliente}</strong> | NF: ${f.nf} (${f.parc})<br>
-        Valor: R$ ${f.valor.toFixed(2)} | Venc: <input type="date" value="${f.venc}" onchange="DB.financeiro[${i}].venc=this.value; salvar()" style="width:auto;">
-        ${!f.pago ? `<button onclick="DB.financeiro[${i}].pago=true; salvar(); renderReceber()" style="float:right">RECEBER</button>` : 'PAGO'}
-      </div>`).join('');
+        <strong>${f.cliente}</strong> | NF: ${f.nf} (${f.parc})<br>Valor: R$ ${f.valor.toFixed(2)} | Venc: <input type="date" value="${f.venc}" onchange="SISTEMA.financeiro[${i}].venc=this.value; salvarDados()" style="width:auto;">
+        ${!f.pago ? `<button onclick="SISTEMA.financeiro[${i}].pago=true; salvarDados(); renderReceber()" style="float:right">BAIXAR</button>` : 'PAGO'}</div>`).join('');
   }
 
-  // --- CONFIGURAÇÕES ---
+  function renderDash() {
+    let totKg = 0; let fat = 0;
+    SISTEMA.vendas.filter(v => v.confirmado).forEach(v => {
+      fat += v.total;
+      v.itens.forEach(it => totKg += (it.kg * it.q));
+    });
+    document.getElementById('dashStats').innerHTML = `<h4>Faturamento: R$ ${fat.toFixed(2)}</h4><h4>Total Borracha: ${totKg.toFixed(1)} KG</h4>`;
+  }
+
   function renderCfg() {
-    document.getElementById('cfgVh').value = DB.vh;
-    document.getElementById('matSelect').innerHTML = DB.mats.map(m => `<option value="${m.p}">${m.n}</option>`).join('');
-    document.getElementById('listaMatsCfg').innerHTML = DB.mats.map((m, i) => `
+    document.getElementById('cfgVh').value = PRECOS.vh;
+    document.getElementById('matSelect').innerHTML = PRECOS.mats.map(m => `<option value="${m.p}">${m.n}</option>`).join('');
+    document.getElementById('listaMatsCfg').innerHTML = PRECOS.mats.map((m, i) => `
         <div style="display:flex; gap:5px; margin-top:5px">
             <input type="text" value="${m.n}" readonly style="flex:2">
-            <input type="number" value="${m.p}" onchange="DB.mats[${i}].p=parseFloat(this.value); salvar()">
-            <button onclick="DB.mats.splice(${i},1); salvar(); renderCfg()">X</button>
+            <input type="number" value="${m.p}" onchange="PRECOS.mats[${i}].p=parseFloat(this.value); salvarTabelaPrecos()">
+            <button onclick="PRECOS.mats.splice(${i},1); salvarTabelaPrecos(); renderCfg()">X</button>
         </div>`).join('');
   }
-  function addMat() { const n = prompt("Nome:"); const p = prompt("Preco:"); if(n&&p) {DB.mats.push({n, p: parseFloat(p)}); salvar(); renderCfg();} }
-  function salvar() { localStorage.setItem('marbe_v19_oficial', JSON.stringify(DB)); }
+
+  function addMat() { const n = prompt("Nome:"); const p = prompt("Preco:"); if(n&&p) {PRECOS.mats.push({n, p: parseFloat(p)}); salvarTabelaPrecos(); renderCfg();} }
+  function salvarTabelaPrecos() { 
+    PRECOS.vh = parseFloat(document.getElementById('cfgVh').value);
+    localStorage.setItem('marbe_precos_v20', JSON.stringify(PRECOS)); 
+  }
+  function salvarDados() { localStorage.setItem('marbe_dados_v20', JSON.stringify(SISTEMA)); }
+
   function gerarPDF() {
     const { jsPDF } = window.jspdf; const doc = new jsPDF();
-    const os = DB.os;
-    doc.text("MARBE COMERCIO E SERVICOS", 20, 20);
-    doc.text("OS: "+os+" | Cliente: "+document.getElementById('razao').value, 20, 30);
+    const osNum = SISTEMA.os;
+    doc.text("S B COMERCIO DE BORRACHAS E SERVICOS LTDA", 20, 20);
+    doc.text("OS: "+osNum+" | Cliente: "+document.getElementById('razao').value, 20, 30);
     const rows = itens.map(i => [i.n, i.med, i.e, i.q, i.v.toFixed(2), (i.v*i.q).toFixed(2)]);
-    doc.autoTable({ startY: 40, head: [['Desc', 'Med', 'Esp', 'Qtd', 'Unit', 'Total']], body: rows });
-    DB.vendas.push({ os, cliente: document.getElementById('razao').value, total: parseFloat(document.getElementById('totalOrc').innerText.replace("R$ ","")), confirmado: false, entregue: false, itens: [...itens] });
-    DB.os++; salvar(); doc.save("OS_"+os+".pdf");
+    doc.autoTable({ startY: 40, head: [['Servico', 'Medidas', 'Esp.', 'Qtd', 'Unit.', 'Total']], body: rows });
+    SISTEMA.vendas.push({ os: osNum, cliente: document.getElementById('razao').value, total: parseFloat(document.getElementById('totalOrc').innerText.replace("R$ ","")), confirmado: false, entregue: false, itens: [...itens] });
+    SISTEMA.os++; salvarDados(); doc.save("OS_"+osNum+".pdf");
   }
 </script>
 </body>
